--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
 RewriteEngine on
-RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.*)$ index.php?route=$1 [L,QSA]
+RewriteRule ^(.*)$ index.php&route=$1 [L,QSA]
